# auto-outreach-agent

./: .gitignore  README.md  config.py  email_dataset.csv  email_generator.py  email_sender.py  email_template.txt  job_scraper.py  logger.py  main.py  prashanth.txt  pyproject.toml  requirements.txt
