[project]
name = "coldmail-automation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.2",
    "google-api-python-client==2.108.0",
    "google-auth-httplib2==0.1.1",
    "google-auth-oauthlib==1.1.0",
    "openai==1.3.0",
    "pandas==2.1.3",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
]
